--- a/code/cfg/bird.yml
+++ b/code/cfg/bird.yml
@@ -26,7 +26,7 @@ local_rank: 0
 TRAIN:
     NF: 32 # default 64
     BATCH_SIZE: 16          # A100: 64;  server 18: 16;
-    MAX_EPOCH: 601
+    MAX_EPOCH: 1 # 601
     # NET_G: '../test'
     FID: True
     g_lr: 0.001
